<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KangaMart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="lbl_register">Don\'t Have An Account?</string>
    <string name="lbl_user_field">Enter Email Address</string>
    <string name="lbl_pass_field">Enter Password</string>
    <string name="lbl_login">Login</string>
    <string name="order">Order</string>
    <string name="delivery">Delivery</string>
    <string name="title_activity_register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="confirm_password">Confirm Password</string>

    <string-array name="urgency">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
        <item>VAMOS!!!!</item>
    </string-array>

    <string name="choose_urgency">Choose Urgency</string>
    <string name="option">What do you want to do?</string>
    <string name="title_activity_confirm_delivery">ConfirmDelivery</string>
    <string name="title_activity_out_for_delivery">OutForDelivery</string>
    <string name="title_activity_payment">Payment</string>

</resources>
