<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@android:dimen/app_icon_size"
    android:paddingRight="@android:dimen/app_icon_size"
    android:paddingTop="@android:dimen/app_icon_size"
    android:paddingBottom="@android:dimen/app_icon_size"
    tools:context=".MainActivity"
    android:background="@android:color/holo_green_light">
    <TextView
        android:id="@+id/Title"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="55sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/UserField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title"
        android:paddingTop="150dp">

        <TextView
            android:id="@+id/UserLabel"
            android:text="@string/username"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/UserEntry"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_user_field"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PassField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/UserField"
        >
        <TextView
            android:id="@+id/PassLabel"
            android:text="@string/password"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/PassEntry"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_pass_field"/>
    </LinearLayout>

    <Button
        android:id="@+id/Forgot"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/PassField"
        android:text="@string/lbl_login"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/noAccount"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Forgot"
        android:text="@string/lbl_register"
        android:textSize="20sp"
        />

</RelativeLayout>
