<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.brandon.kangamart.Register"
    android:background="@android:color/holo_green_light">

    <TextView
        android:id="@+id/registration_title"
        android:text="@string/sign_up"
        android:textSize="85sp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/email_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/registration_title"
        android:paddingTop="50dp">

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="25sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/enter_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_user_field"
            android:textSize="25sp"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_input">

        <TextView
            android:id="@+id/email_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_email"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            />

        <EditText
            android:id="@+id/confirm_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_user_field"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_email">

        <TextView
            android:id="@+id/password_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="25sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/password_entry"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_pass_field"
            android:textSize="25sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_password"
        android:layout_below="@id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">

        <TextView
            android:id="@+id/password_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textSize="25sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_pass_field"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:text="@string/sign_up"
        android:textSize="30sp"/>
</RelativeLayout>
